--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="tweet">TWEET</string>
     <string name="profile_picture">Profile Picture</string>
     <string name="tweet_media">Tweet Media</string>
+    <string name="what_s_happening">What\'s happening...</string>
 
 </resources>
